// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Heading Defaults play-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_12p5o_1 _heading_level1_12p5o_16">
    Heading level 1
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level2_12p5o_25">
    Heading level 2
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level3_12p5o_34">
    Heading level 3
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level4_12p5o_43">
    Heading level 4
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level5_12p5o_47">
    Heading level 5
  </h2>
</div>
`;

exports[`Tester/Heading DefaultsMobile smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_12p5o_1 _heading_level1_12p5o_16">
    Heading level 1
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level2_12p5o_25">
    Heading level 2
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level3_12p5o_34">
    Heading level 3
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level4_12p5o_43">
    Heading level 4
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level5_12p5o_47">
    Heading level 5
  </h2>
</div>
`;

exports[`Tester/Heading LevelsWithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_12p5o_1 _heading_level1_12p5o_16 _heading_hasSpacingMedium_12p5o_57">
    Heading level 1
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level2_12p5o_25 _heading_hasSpacingSmallMobileMediumOtherwise_12p5o_60">
    Heading level 2
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54">
    Heading level 3
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level4_12p5o_43 _heading_hasSpacingSmall_12p5o_54">
    Heading level 4
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level5_12p5o_47 _heading_hasSpacingExtraSmall_12p5o_51">
    Heading level 5
  </h2>
</div>
`;

exports[`Tester/Heading LevelsWithSpacingMobile smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_12p5o_1 _heading_level1_12p5o_16 _heading_hasSpacingMedium_12p5o_57">
    Heading level 1
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level2_12p5o_25 _heading_hasSpacingSmallMobileMediumOtherwise_12p5o_60">
    Heading level 2
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54">
    Heading level 3
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level4_12p5o_43 _heading_hasSpacingSmall_12p5o_54">
    Heading level 4
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level5_12p5o_47 _heading_hasSpacingExtraSmall_12p5o_51">
    Heading level 5
  </h2>
</div>
`;

exports[`Tester/Heading WithAs play-test 1`] = `
<div data-test-block="true">
  <h1 class="_heading_12p5o_1 _heading_level2_12p5o_25">
    Heading h1
  </h1>
  <h2 class="_heading_12p5o_1 _heading_level2_12p5o_25">
    Heading h2
  </h2>
  <h3 class="_heading_12p5o_1 _heading_level2_12p5o_25">
    Heading h3
  </h3>
  <h4 class="_heading_12p5o_1 _heading_level2_12p5o_25">
    Heading h4
  </h4>
  <h5 class="_heading_12p5o_1 _heading_level2_12p5o_25">
    Heading h5
  </h5>
  <h6 class="_heading_12p5o_1 _heading_level2_12p5o_25">
    Heading h6
  </h6>
</div>
`;

exports[`Tester/Heading WithAttributes play-test 1`] = `
<div data-test-block="true">
  <h2 id="htmlId"
      class="_heading_12p5o_1 _heading_level2_12p5o_25  dummyClassname"
      lang="nb"
      data-testid="123ID"
  >
    Dette er en heading
  </h2>
</div>
`;

exports[`Tester/Heading WithCanBeManuallyFocused play-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_12p5o_1 _heading_level2_12p5o_25"
      tabindex="-1"
  >
    Dette er en heading
  </h2>
</div>
`;

exports[`Tester/Heading WithMarkup smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_12p5o_1 _heading_level2_12p5o_25 _heading_hasSpacingSmallMobileMediumOtherwise_12p5o_60">
    Dette er den
    <a href="https://www.skatteetaten.no">
      fyneste markup headingen
    </a>
    <em>
      som finnes i italic
    </em>
    <strong>
      og strong
    </strong>
    <mark>
      mark
    </mark>
    <code>
      code
    </code>
    med spacing under og en skrivefeil
  </h2>
  <h2 class="_heading_12p5o_1 _heading_level2_12p5o_25">
    Dette er den fineste string headingen uten markup
  </h2>
</div>
`;

exports[`Tester/Heading WithRef play-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_12p5o_1 _heading_level2_12p5o_25"
      id="dummyIdForwardedFromRef"
  >
    Dette er en heading
  </h2>
</div>
`;
